--- a/backend/Ballerina.toml
+++ b/backend/Ballerina.toml
@@ -6,3 +6,6 @@ distribution = "2201.12.7"
 
 [build-options]
 observabilityIncluded = true
+
+[[platform.java17.dependency]]
+path = "./libs/document-extractor.jar"
