Recreate database schema and add initial SQL scripts
- Created `create_database_schema.sql` for schema initialization.
- Added `database_schema_updates.sql` with complete database recreation script, including table definitions, constraints, triggers, and indexes.
- Introduced `fix_id_column_types.sql` for future adjustments to ID column types.
- Implemented row-level security policies for enhanced data access control.
- Included verification queries to ensure schema correctness and test vector operations.

--- a/backend/Ballerina.toml
+++ b/backend/Ballerina.toml
@@ -9,3 +9,11 @@ observabilityIncluded = true
 
 [[platform.java17.dependency]]
 path = "./libs/document-extractor.jar"
+
+[[platform.java17.dependency]]
+path = "./libs/postgresql-42.7.2.jar"
+
+[[dependency]]
+org = "ballerinax"
+name = "postgresql"
+version = "1.11.0"
