--- a/backend/Ballerina.toml
+++ b/backend/Ballerina.toml
@@ -7,13 +7,15 @@ distribution = "2201.12.7"
 [build-options]
 observabilityIncluded = true
 
-[[platform.java17.dependency]]
+[[platform.java21.dependency]]
 path = "./libs/document-extractor.jar"
-
-[[platform.java17.dependency]]
-path = "./libs/postgresql-42.7.2.jar"
 
 [[dependency]]
 org = "ballerinax"
 name = "postgresql"
-version = "1.11.0"
+version = "1.16.1"
+
+[[dependency]]
+org = "ballerinax"
+name = "postgresql.driver"
+version = "1.6.0"
